--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/studyNotionLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Study Notion</title>
+  <title>SkillNest</title>
 
 
   <link href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap" rel="stylesheet">
